# displasia-backend

./: create.sql  database.db  database.sqbpro  pyproject.toml
displasia_backend/: .todo.txt.swp  DisplasiaDataReader.py  app.py  dependencies.py  logger.py  main.py  models.py  todo.txt
displasia_backend/Data/Atributes/: AtributesEnglish.txt  MorphologicalAtributesUsed.txt  NonMorphologicalAtributesUsed.txt
displasia_backend/Data/Displasia/: .~lock.caracteristicas-healthy.csv#  caracteristicas-healthy.csv  caracteristicas-mild.csv  caracteristicas-moderate.csv  caracteristicas-severe.csv
displasia_backend/Data/Lymphomas/: AtributesUsed.txt  caracteristicas-CLL.mat  caracteristicas-FL.mat  caracteristicas-MCL.mat
displasia_backend/db/: database.py
displasia_backend/db/repository/: amostra.py  anchor.py
displasia_backend/services/: model.py
displasia_backend/static/: model.joblib  modelbin.joblib
displasia_backend/utils/: util.py
