[tool.poetry]
name = "displasia-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.2"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.2"
anchor-exp = "^0.0.2.0"
shap = "^0.43.0"
matplotlib = "^3.8.1"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
joblib = "^1.3.2"
ipython = "^8.17.2"
sqlmodel = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
